# voice_vox_gui

./: .gitignore  Cargo.toml
.github/workflows/: rust-clippy.yml
src/: api.rs  api_schema.rs  bottom_pane.rs  chara_change_button.rs  context_menu.rs  dialogue.rs  history.rs  left_pane.rs  main.rs  project.rs  right_pane.rs  tool_bar.rs
voice_vox/: Cargo.toml
voice_vox/src/: bottom_pane.rs  commands.rs  history.rs  main.rs  menu.rs  project.rs  right_pane.rs  tool_bar.rs
voice_vox_api/: Cargo.toml  README.md
voice_vox_api/src/: api.rs  api_schema.rs  lib.rs
