[package]
name = "voice_vox_gui"
version = "0.1.0"
edition = "2021"
description = "voicevox gui implementation in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
eframe = { version = "0.17" }
egui_extras ={version ="0.17",features=["image"]}
env_logger = "0.9.0"
form_urlencoded = "1.0.1"
image = { version = "0.24", features = ["png"] }
log = "0.4.16"
once_cell = "1.10.0"
rodio ="0.15.0"
serde ={ version = "1", features = ["derive"] }
serde_json = "1.0.79"
simple-log = "1.5.1"
trace = "0.1.6"
ureq={ version = "2", features = ["json"] }
url = "2"
tokio = {version ="1",features = ["full"]}
rayon = "1"
reqwest ={version ="0.11",features=["serde_json","json"]}
async-trait="0.1"