[package]
name = "voice_vox_gui"
version = "0.1.0"
edition = "2021"
description = "voicevox gui implementation in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
eframe = { version = "0.17" }
egui_extras ={version ="0.17",features=["image"]}
form_urlencoded = "1"
image = { version = "0.24", features = ["png"] }
log = "0.4"
once_cell = "1.10"
rodio ="0.15"
serde ={ version = "1", features = ["derive"] }
serde_json = "1"
simple-log = "1"
url = "2"
tokio = {version ="1",features = ["once_cell","net","tracing","test-util","rt-multi-thread","macros"]}
reqwest ={version ="0.11",features=["serde_json","json"]}
async-trait="0.1"