[package]
name = "voice_vox_gui"
version = "0.1.0"
edition = "2021"
description = "voicevox gui implementation in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
base64 = "0.13"
eframe = { version = "0.18.0", git = "https://github.com/t18b219k/egui.git", branch = "master" }
egui_extras ={ version = "0.18.0", git = "https://github.com/t18b219k/egui.git", branch = "master", features = ["image"] }
form_urlencoded = "1"
image = { version = "0.24", features = ["png"] }
log = "0.4"
once_cell = "1.10"
reqwest ={ version = "0.11", features = ["serde_json","json"] }
rodio ="0.15"
serde ={ version = "1", features = ["derive"] }
serde_json = "1"
simple-log = "1"
tokio = { version = "1", features = ["once_cell","net","tracing","test-util","rt-multi-thread","macros"] }
url = "2"
uuid={version="1",features=["v4"]}