[package]
name = "voice_vox"
version = "0.1.0"
edition = "2021"
description = "voicevox gui implementation in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
eframe = { version = "0.18.0", git = "https://github.com/t18b219k/egui.git", branch = "master" }
egui_extras ={ version = "0.18.0", git = "https://github.com/t18b219k/egui.git", branch = "master", features = ["image"] }
image = { version = "0.24", features = ["png"] }
log = "0.4"
once_cell = "1.10"
rodio ="0.15"
simple-log = "1"
serde ={ version = "1", features = ["derive"] }
tokio = { version = "1", features = ["once_cell","net","tracing","time","test-util","rt-multi-thread","macros"] }
uuid={version="1",features=["v4"]}
voice_vox_api={path="../voice_vox_api"}